--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.7.0",
     "@types/jest": "23.3.10",
+    "@types/material-ui": "^0.21.5",
     "@types/node": "10.12.18",
     "@types/react": "16.7.17",
     "@types/react-dom": "16.0.11",
@@ -16,7 +18,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "echo": "echo \"hello\""
   },
   "eslintConfig": {
     "extends": "react-app"
