--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@types/node": "10.12.18",
     "@types/react": "16.7.17",
     "@types/react-dom": "16.0.11",
+    "axios": "^0.18.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-scripts": "2.1.1",
-    "typescript": "3.2.2"
+    "typescript": "3.2.2",
+    "typestyle": "^2.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
